[package]
name = "aogpx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cheap-ruler = "0.4.0"
geo-types = "0.7.12"
gpx = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
reqwest = { version = "0.11", features = ["blocking", "json"] }